cdebconf (0.96) UNRELEASED; urgency=low

  * Fix crash when console is switched in gtk-frontend (closes: #339379).
    Continue processing when interupt is received from DirectFB while the
    read function is blocked while listening to the client.
    Thanks to Denis Oliver Kropp for helping debug this issue.

 -- Frans Pop <fjp@debian.org>  Fri, 20 Jan 2006 20:11:37 +0100

cdebconf (0.95) unstable; urgency=low

  [ Colin Watson ]
  * Add progress bar cancellation support, only in the newt frontend for
    now. If you send 'CAPB progresscancel', then PROGRESS SET, PROGRESS
    STEP, and PROGRESS INFO may return 30 to indicate that the user
    cancelled the progress bar (closes: #250463).

  [ Attilio Fiandrotti ]
  * Localise back/forward buttons on frontend initialisation rather than on
    GO (closes: #347918).

  [ Updated translations ]
  * Czech (cs.po) by Miroslav Kure
  * Danish (da.po) by Claus Hindsgaul
  * German (de.po) by Jens Seidel
  * Basque (eu.po) by Piarres Beobide
  * Finnish (fi.po) by Tapio Lehtonen
  * French (fr.po) by Christian Perrier
  * Galician (gl.po) by Jacobo Tarrio
  * Japanese (ja.po) by Kenshi Muto
  * Korean (ko.po) by Sunjae park
  * Latvian (lv.po) by Aigars Mahinovs
  * Macedonian (mk.po) by Georgi Stanojevski
  * Dutch (nl.po) by Bart Cornelis
  * Dutch (pa_IN.po) by Amanpreet Singh Alam
  * Portuguese (pt.po) by Miguel Figueiredo
  * Portuguese (Brazil) (pt_BR.po) by André Luís Lopes
  * Russian (ru.po) by Yuri Kozlov
  * Swedish (sv.po) by Daniel Nylander
  * Turkish (tr.po) by Recai Oktaş
  * Vietnamese (vi.po) by Clytie Siddall
  * Wolof (wo.po) by Mouhamadou Mamoune Mbacke
  * Simplified Chinese (zh_CN.po) by Ming Hua

 -- Colin Watson <cjwatson@debian.org>  Mon, 16 Jan 2006 15:15:30 +0000

cdebconf (0.94) unstable; urgency=low

  [ Attilio Fiandrotti ]
  * Removed no longer needed INFO() lines from the GTK frontend to prevent
    syslog pollution.