@@ -1,9 +1,15 @@
 cdebconf (0.96) UNRELEASED; urgency=low
 
+  [ Frans Pop ]
   * Fix crash when console is switched in gtk-frontend (closes: #339379).
     Continue processing when interupt is received from DirectFB while the
     read function is blocked while listening to the client.
     Thanks to Denis Oliver Kropp for helping debug this issue.
+
+  [ Denis Barbier ]
+  * Change colors in the newt frontend to have a black background if the
+    bg environment variable is set to "dark".  Some people can hardly
+    read on a white background (closes: #330418).
 
  -- Frans Pop <fjp@debian.org>  Fri, 20 Jan 2006 20:11:37 +0100
 
